# Side_Project_2026

./: .dockerignore  .env.example  .gitignore  BLUEPRINT.md  BUGFIX_PLAN.md  BUGS_FOUND.md  CLAUDE.md  Dockerfile  INSTALL.sh  Makefile  README.md  RESEARCH_BEST_PRACTICES.md  ROADMAP_VIBE_CODER.md  alembic.ini  apply_fixes.sh  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  readme.md  requirements.txt  reset.py  review-to-n-b-codebase-iterative-treasure copy.md  run_ui.py
.streamlit/: config.toml
deployments/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  TROUBLESHOOTING.md  USER_GUIDE.md
docs/inspiration/: Sensory Lexicon.md  system prompt JP→VN.md
packs/style/: general.en.yaml  litrpg.vn.yaml  tu_tien.en.yaml  tu_tien.vn.yaml
prompts/: system_agent.md
scripts/: demo_applier.py  demo_automaton.py  demo_qt_dict.py  live_test.py  main.py  reset.py  run_ui.py  test_famous_names.py  test_phase2.py
src/littrans/: cli.py
src/littrans/bible/: bible_cli.py  bible_consolidator.py  bible_prompt_builder.py  bible_scanner.py  bible_store.py  pipeline_bible_patch.py
src/littrans/cli/: __init__.py  commands.py  tool_fix.py
src/littrans/config/: settings.py
src/littrans/context/: __init__.py  base.py  bible_cli.py  bible_consolidator.py  bible_exporter.py  bible_prompt_builder.py  bible_query.py  bible_response_parser.py  bible_scanner.py  bible_store.py  characters.py  cross_reference.py  glossary.py  memory.py  name_lock.py  pipeline_bible_patch.py  schemas.py  skills.py
src/littrans/core/: __init__.py  pipeline.py  post_analyzer.py  post_processor.py  pre_processor.py  prompt_builder.py  quality_guard.py  scout.py  text_normalizer.py
src/littrans/engine/: pipeline.py  post_analyzer.py  pre_processor.py  prompt_builder.py  quality_guard.py  scout.py
src/littrans/llm/: __init__.py  client.py  schemas.py  token_budget.py
src/littrans/managers/: base.py  characters.py  glossary.py  memory.py  skills.py
src/littrans/modules/scraper/: __init__.py  config.py
src/littrans/modules/scraper/ai/: agents.py  agents_helpers.py  client.py  prompts.py
src/littrans/modules/scraper/core/: chapter_writer.py  extractor.py  fetch.py  formatter.py  html_filter.py  navigator.py  scraper.py  session_pool.py  story_meta.py
src/littrans/modules/scraper/learning/: migrator.py  naming.py  phase.py  phase_ai.py  profile_manager.py
src/littrans/modules/scraper/pipeline/: base.py  executor.py  extractor.py  fetcher.py  navigator.py  title_extractor.py  validator.py
src/littrans/modules/scraper/utils/: ads_filter.py  content_cleaner.py  (+3 more)
src/littrans/tools/: clean_glossary.py  epub_exporter.py  epub_processor.py
src/littrans/ui/: app.py  bible_ui.py  env_utils.py  epub_ui.py  loaders.py  pipeline_page.py  runner.py  scraper_page.py  ui_utils.py
src/littrans/ui/core/: __init__.py  jobs.py  state.py
src/littrans/ui/pages/: bible_page.py  chapters_page.py  characters_page.py  export_page.py  glossary_page.py  library_page.py  scrape_page.py  settings_page.py  stats_page.py  translate_page.py  welcome_page.py
src/littrans/utils/: __init__.py  bench.py  env_utils.py  io_utils.py  logger.py  post_processor.py  retry_utils.py  text_normalizer.py
src/trilex/: config.py  logging_config.py
src/trilex/cli/: __init__.py  main.py
src/trilex/core/: style_pack.py
src/trilex/core/models/: __init__.py  character.py  project.py  term.py
src/trilex/core/pipeline/: __init__.py  orchestrator.py
src/trilex/memory/: __init__.py  scout.py
src/trilex/output/: __init__.py  epub.py  obsidian.py  plain_text.py
src/trilex/persistence/: __init__.py  db.py  models.py
src/trilex/persistence/migrations/: env.py
src/trilex/persistence/repos/: __init__.py  chapter_repo.py  job_repo.py  project_repo.py  term_repo.py
src/trilex/providers/: __init__.py  base.py  gemini.py
src/trilex/qt_dict/: __init__.py  applier.py  automaton.py  parser.py
src/trilex/ui/: __init__.py  _helpers.py  app.py
src/trilex/ui/pages/: 01_Library.py  02_Translate.py  03_Jobs.py  04_Dictionary.py  05_Glossary.py  06_Settings.py  07_Export.py
src/trilex/ui/runners/: __init__.py  translate_runner.py
tests/unit/: test_applier.py  test_automaton.py  test_cli.py  test_concurrency.py  test_config.py  test_db_extra.py  test_edge_cases.py  test_epub_100_chapters.py  test_export.py  test_hardening.py  test_memory.py  test_obsidian.py  test_orchestrator.py  test_persistence.py  test_polish.py  test_providers.py  test_qt_dict.py  test_repos.py  test_scout.py  test_style_pack.py  test_translate_runner.py  test_ui_helpers.py
(+7 files in other folders)
