[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "novelpipeline"
version = "1.0.0"
description = "Novel scraping, EPUB processing, and translation pipeline"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "typer[all]>=0.12",
    "tqdm>=4.0",
    "filelock>=3.12",
    "curl-cffi>=0.6.0",
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "ebooklib>=0.18",
]

[project.optional-dependencies]
fast = ["pyahocorasick>=2.0"]

[project.scripts]
littrans = "littrans.cli:app"

[tool.setuptools.packages.find]
where = ["src"]